TA-T3811 prevent selection on mobile

--- a/src/app/components/rating/rating.component.scss
+++ b/src/app/components/rating/rating.component.scss
@@ -3,6 +3,15 @@
   align-items: center;
   cursor: default;
 
+  // Prevent selection
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
   &.selectable {
     cursor: pointer;
   }
